ops/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nstam
  namespace: nstam
  labels:
    app: nstam
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nstam
  template:
    metadata:
      labels:
        app: nstam
    spec:
      containers:
        - name: nstam
          image: nickstamat/nstam:$GITHUB_SHA
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 32Mi
          ports:
            - name: web
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: web
            failureThreshold: 2
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: web
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              readOnly: true
              name: nginx-default-conf
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: nginx-default-conf
          configMap:
            name: nginx-default-conf
            items:
              - key: default.conf
                path: default.conf
