ops/k8s/app.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nstam
  namespace: nstam
  labels:
    app: nstam
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nstam.gr`) || Host(`www.nstam.gr`)
      kind: Rule
      services:
        - name: nstam
          port: 80
  tls:
    secretName: nstam-cert

---
apiVersion: v1
kind: Service
metadata:
  name: nstam
  namespace: nstam
  labels:
    app: nstam
spec:
  selector:
    app: nstam
  ports:
    - name: web
      port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nstam
  namespace: nstam
  labels:
    app: nstam
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nstam
  template:
    metadata:
      labels:
        app: nstam
    spec:
      containers:
        - name: nstam
          image: nickstamat/nstam:$GITHUB_SHA
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 32Mi
          ports:
            - name: web
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: web
            failureThreshold: 2
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: web
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              readOnly: true
              name: nginx-default-conf
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: nginx-default-conf
          configMap:
            name: nginx-default-conf
            items:
              - key: default.conf
                path: default.conf
